--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,7 @@
-Version-13022013 - Fixed issue where cgniner start settings were not being saved correctly
+Version-13022013b - cgminer save start settings was still causing issues due to the way $strings were being processed.
+I have finally fixed this issue at last! :) I will rebuild the installer again with this script.
+
+Version-13022013 - Fixed issue where cgminer start settings were not being saved correctly
 Also increased the delay between cgminer start & watchdog start to 60sec from 10sec - this
 gives cgminer time to get up & running to full potential and avoids unecessary false alarm triggers.
 
