--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+Version-14022013b - new 'Configuration' sub-menu now added, user can now run the whole setup wizard again or choose to set 
+the watchdog trigger threshold & configure cgminers' start settings all independently.
+
 Standalone installer now updated to reflect Version-14022013 changes
 
 version-14022013 - simplified the dependency checking part of the script so it wasn't so distro specific.
